Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   </head>
   <body>
 
+<nav></nav>
+
+<main>
     <!-- Use a header tag to wrap the h1 and h2 tags instead of a div-->
     <header>
       <h1>Exceptional Header</h1>
@@ -96,6 +99,6 @@
         <p>All Rights Reserved.</p>
       </details>
     </footer>
-
+</main>
   </body>
 </html>
