--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <a href="#" target="_blank">Facebook</a><br>
             <a href="#" target="_blank">Twitter</a>
           </p>
-      </section>
+      </div>
     </div>
     <!-- End of main part of webpage -->
 
