--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
             <a href="#" target="_blank">Afordable Mortgages</a><br>
             <a href="#" target="_blank">Professional Moving Crew</a>
           </p>
-
+        <figure>
           <h3>Follow Us</h3>
           <p>
             <a href="#" target="_blank">Youtube</a><br>
             <a href="#" target="_blank">Facebook</a><br>
             <a href="#" target="_blank">Twitter</a>
           </p>
+        </figure>
       </section>
     </main>
     <!-- End of main part of webpage -->
