--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </video>
 
           <!-- Wrap this text in a figcaption tag so that it captions the video above-->
-          <figcaption>Exceptional Promotional Video - Source: archive.org</figcaption>
+          <span>Exceptional Promotional Video - Source: archive.org</span>
         </div>
       </section>
 
@@ -62,13 +62,13 @@
             <a href="#" target="_blank">Afordable Mortgages</a><br>
             <a href="#" target="_blank">Professional Moving Crew</a>
           </p>
-
+        
           <h3>Follow Us</h3>
-          <figure>
+          <p>
             <a href="#" target="_blank">Youtube</a><br>
             <a href="#" target="_blank">Facebook</a><br>
             <a href="#" target="_blank">Twitter</a>
-          </figure>
+          </p>
       </section>
     </main>
     <!-- End of main part of webpage -->
